--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hammer Hacks II </title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/empty.css">
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -18,25 +19,44 @@
 </head>
 <body>
   <body class="main">
-  <div class="head" id="header">
-    <button class="text-2xl relative left-0 hover:bg-gray-300 h-30">
+  <div class="head relative" id="header">
+  
+ <div class="logo pl-6 pr-4 flex items-center">
+  <a href="index.html">
+    <img src="logo.jpeg" alt="Hammer Hacks Logo"
+      class="h-14 w-auto max-w-[160px] transition-transform duration-300 hover:scale-105 drop-shadow-md rounded-md" />
+  </a>
+</div>
+  
+    <button class="text-2xl relative right-0 hover:bg-gray-300 h-25">
       About
     </button>
-    <button class="text-2xl relative left-3 hover:bg-gray-300 h-30">
+    <button class="text-2xl relative left-3 hover:bg-gray-300 h-25">
       Sponsors
     </button>
-    <button class="text-2xl relative left-6 hover:bg-gray-300 h-30">
+    <button class="text-2xl relative left-6 hover:bg-gray-300 h-25">
       Schedule
     </button>
-    <button class="text-2xl relative left-9 hover:bg-gray-300 h-30">
+    <button class="text-2xl relative left-9 hover:bg-gray-300 h-25">
       FAQ
     </button>
-    <button class="text-2xl relative left-12 hover:bg-gray-300 h-30">
+    <button class="text-2xl relative left-12 hover:bg-gray-300 h-25">
       Team
     </button>
-    <button class="text-2xl relative left-15 hover:bg-gray-300 h-30">
+    <button class="text-2xl relative left-15 hover:bg-gray-300 h-25">
       Support
     </button>
+	
+	<button class="absolute right-0 top-4 mr-4 text-3xl h-10 w-30 rounded-2xl font-bold bg-orange-400 hover:bg-orange-500">
+  Register
+</button>
+
+	
+	
+	
+	
+	
+	
   </div>
   <div class="homepage">
 
@@ -57,14 +77,15 @@
     
   </div>
   <div class="foot" id="footer">
-    <h1 class="text-4xl font-bold relative top-4 ">
+    <p class="text-3xl font-bold relative top-4 ">
     Interested in supporting our hackathon?
-    </h1>
+    </p>
     <a href="https://hcb.hackclub.com/donations/start/hammerhacks" class="text-3xl h-10 w-30 rounded-2xl font-bold bg-orange-400 relative top-10 hover:bg-orange-500">Donate</a>
-    <h1 class="text-4xl font-bold relative top-15">
+    <h1 class="text-2xl font-bold relative top-15">
     Contact Us
     </h1>
-    <p class="text-2xl relative top-15 font-[Roboto]">For any inquiries, please email us at info@hammerhacks.ca</p>
+    <p class="text-1xl relative top-15 font-[Roboto]">For any inquiries, please email us at info@hammerhacks.ca</p>
   </div>
 </body>
 </html>
+
