fixed button border and added credits

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   <body class="main">
   <div class="head relative" id="header">
   
- <div class="logo pl-6 pr-4 flex items-center">
-  <a href="index.html">
-    <img src="logo.jpeg" alt="Hammer Hacks Logo"
-      class="h-14 w-auto max-w-[160px] transition-transform duration-300 hover:scale-105 drop-shadow-md rounded-md" />
-  </a>
-</div>
-  
+    <div class="logo pl-6 pr-4 flex items-center">
+      <a href="index.html">
+        <img src="logo.jpeg" alt="Hammer Hacks Logo"
+          class="h-14 w-auto max-w-[160px] transition-transform duration-300 hover:scale-105 drop-shadow-md rounded-md" />
+      </a>
+    </div>
+
     <button class="text-2xl relative right-0 hover:bg-gray-300 h-25">
       About
     </button>
@@ -46,17 +46,9 @@
     <button class="text-2xl relative left-15 hover:bg-gray-300 h-25">
       Support
     </button>
-	
-	<button class="absolute right-0 top-4 mr-4 text-3xl h-10 w-30 rounded-2xl font-bold bg-orange-400 hover:bg-orange-500">
-  Register
-</button>
-
-	
-	
-	
-	
-	
-	
+    <button class="absolute right-0 top-5 mr-4 text-3xl h-13 w-35 rounded-3xl font-bold bg-orange-400 hover:bg-orange-500  border-8 border-orange-400  hover:border-orange-500">
+      Register
+    </button>
   </div>
   <div class="homepage">
 
@@ -78,13 +70,18 @@
   </div>
   <div class="foot" id="footer">
     <p class="text-3xl font-bold relative top-4 ">
-    Interested in supporting our hackathon?
-    </p>
-    <a href="https://hcb.hackclub.com/donations/start/hammerhacks" class="text-3xl h-10 w-30 rounded-2xl font-bold bg-orange-400 relative top-10 hover:bg-orange-500">Donate</a>
-    <h1 class="text-2xl font-bold relative top-15">
-    Contact Us
-    </h1>
-    <p class="text-1xl relative top-15 font-[Roboto]">For any inquiries, please email us at info@hammerhacks.ca</p>
+    Interested in supporting our hackathon?</p>
+    <a href="https://hcb.hackclub.com/donations/start/hammerhacks" class="text-3xl border-8 border-orange-400  rounded-4xl font-bold bg-orange-400 relative top-10 hover:bg-orange-500  hover:border-orange-500">
+      Donate
+    </a>
+    <h1 class="text-2xl font-bold relative top-15">Contact Us</h1>
+    <p class="text-1xl relative top-15 font-[Roboto]">For any inquiries, please email us at <a href="mailto:info@hammerhacks.ca" class="underline text-orange-500">info&commat;hammerhacks.ca</a></p>
+
+      <div class="credits">
+            <p>Made with <span class="pink">❤</span> by the HammerHacks Development Team</p>
+            <p class="font-[Roboto]">Our <a href="https://github.com/HammerHacks/2025-Website" class="underline text-orange-400">website</a> and <a href="https://hcb.hackclub.com/hammerhacks" class="underline text-green-500">finances</a> are open</p>
+            <p class="hcb">HammerHacks is fiscally sponsored by The Hack Foundation (d.b.a. <a href="https://hackclub.com/hcb">Hack Club</a>), a 501(c)(3) nonprofit (EIN: 81-2908499)</p>
+      </div>
   </div>
 </body>
 </html>
