--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
       </a>
     </div>
 
-    <button class="text-2xl relative right-0 hover:bg-gray-300 h-25">
+    <button class="text-2xl relative right-0 hover:bg-gray-300 h-25 w-30">
       About
     </button>
-    <button class="text-2xl relative left-3 hover:bg-gray-300 h-25">
+    <button class="text-2xl relative rigth-0 hover:bg-gray-300 h-25 w-30">
       Sponsors
     </button>
-    <button class="text-2xl relative left-6 hover:bg-gray-300 h-25">
+    <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30">
       Schedule
     </button>
-    <button class="text-2xl relative left-9 hover:bg-gray-300 h-25">
+    <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30">
       FAQ
     </button>
-    <button class="text-2xl relative left-12 hover:bg-gray-300 h-25">
+    <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30">
       Team
     </button>
-    <button class="text-2xl relative left-15 hover:bg-gray-300 h-25">
+    <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30">
       Support
     </button>
     <button class="absolute right-0 top-5 mr-4 text-3xl h-13 w-35 rounded-3xl font-bold bg-orange-400 hover:bg-orange-500  border-8 border-orange-400  hover:border-orange-500">
