--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="index.html">
         <img src="logo.jpeg" alt="Hammer Hacks Logo"
           class="h-14 w-auto max-w-[160px] transition-transform duration-300 hover:scale-105 drop-shadow-md rounded-md" />
-      </a>
+       </a>
     </div>
 
     <button class="text-2xl relative right-0 hover:bg-gray-300 h-25 w-30">
@@ -51,7 +51,11 @@
     </button>
   </div>
   <div class="homepage">
-
+    <div class="mx-auto">
+        <img src="logo.jpeg" alt="Hammer Hacks Logo"
+          class="h-50 w-50 my-20" />
+       </a>
+    </div>
   </div>
   <div class="sponsor">
     
