--- a/index.html
+++ b/index.html
@@ -51,10 +51,26 @@
     </button>
   </div>
   <div class="homepage">
-    <div class="mx-auto">
+    <div class="mx-auto w-auto">
         <img src="logo.jpeg" alt="Hammer Hacks Logo"
-          class="h-50 w-50 my-20" />
+          class="h-50 w-50 my-20 mx-auto" />
        </a>
+      <div class="relative bottom-15">
+        <h1 class="text-4xl font-bold text-yellow-500">A High School Hackathon where you can present your amazing ideas with technology!</h1>
+        <h1 class="text-4xl font-bold">??? 2026</h1>
+        <h1 class="text-4xl font-bold">Location ???</h1>
+      </div>
+
+      <div class="bg-white text-black max-w-300 w-auto mx-auto shadow-md rounded-2xl border-gray-400 border-4" id="AboutUs">
+        <h1 class="text-4xl font-bold">About Us</h1>
+        <p class="text-2xl">
+          Hammer Hacks is a high school hackathon, 
+          a social coding marathon and competition where you can 
+          use technology to make creative ideas come to life,
+          and share your ideas among the students.
+        </p>
+      </div>
+
     </div>
   </div>
   <div class="sponsor">
