--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <p class="text-2xl">
           Hammer Hacks is a high school hackathon, 
           a social coding marathon and competition where you can 
-          use technology to make creative ideas come to life,
-          and share your ideas among the students.
+          use technology to build your most creative ideas and
+          share your project to other students.
         </p>
       </div>
 
