team: scaling effect when hover over team member

--- a/index.html
+++ b/index.html
@@ -109,52 +109,52 @@
         <div class="grid grid-cols-4 grid-rows-4 gap-6">
           <!-- adjust src and data description as needed -->
           <div class="flex items-center justify-center">
-            <img src="assets/SelenaNguyen.png" alt="Member 1" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Selena Nguyen</strong><br>Lead Organizer. Likes → Celeste & Hollow Knight ❤️<br>Grade 12 @ Orchard Park SS" />
+            <img src="assets/SelenaNguyen.png" alt="Member 1" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Selena Nguyen</strong><br>Lead Organizer. Likes → Celeste & Hollow Knight ❤️<br>Grade 12 @ Orchard Park SS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 2" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Maisy Thomas</strong><br>Lead Organizer. Likes → [blank]<br>Grade 12 @ St. Mary SS" />
+            <img src="assets/logo.jpeg" alt="Member 2" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Maisy Thomas</strong><br>Lead Organizer. Likes → [blank]<br>Grade 12 @ St. Mary SS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 3" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>David Cosma</strong><br>Lead Web Developer. Likes → [blank]<br>Grade 12 @ Westmount SS" />
+            <img src="assets/logo.jpeg" alt="Member 3" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>David Cosma</strong><br>Lead Web Developer. Likes → [blank]<br>Grade 12 @ Westmount SS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/AaronDam.jpeg" alt="Member 4" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Aaron Dam</strong><br>Web Developer. Likes → Rhythm Games & Pokémon 🎮<br>Grade 12 @ Westmount SS" />
+            <img src="assets/AaronDam.jpeg" alt="Member 4" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Aaron Dam</strong><br>Web Developer. Likes → Rhythm Games & Pokémon 🎮<br>Grade 12 @ Westmount SS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/Unimashi.jpg" alt="Member 5" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Unimashi Ugor</strong><br>Web Developer. Likes → Roller Coasters, Computer Systems & Retro Gaming 🧑‍💻<br>Grade 11 @ Bishop Ryan CSS" />
+            <img src="assets/Unimashi.jpg" alt="Member 5" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Unimashi Ugor</strong><br>Web Developer. Likes → Roller Coasters, Computer Systems & Retro Gaming 🧑‍💻<br>Grade 11 @ Bishop Ryan CSS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/JasmineMontrichard.jpeg" alt="Member 6" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Jasmine Montrichard</strong><br>Logistics Lead. Likes → [blank]<br>Prev. @ St. Jean Brebeuf CSS" />
+            <img src="assets/JasmineMontrichard.jpeg" alt="Member 6" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Jasmine Montrichard</strong><br>Logistics Lead. Likes → [blank]<br>Prev. @ St. Jean Brebeuf CSS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 7" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Gabriel Tsui</strong><br>Logistics Coordinator. Likes → [blank]<br>Grade 11 @ St. Mary CSS" />
+            <img src="assets/logo.jpeg" alt="Member 7" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Gabriel Tsui</strong><br>Logistics Coordinator. Likes → [blank]<br>Grade 11 @ St. Mary CSS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 16" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Jacob</strong><br>Logistics Coordinator. Likes → [blank]<br>Grade 12 @ Bishop Ryan CSS" />
+            <img src="assets/logo.jpeg" alt="Member 16" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Jacob</strong><br>Logistics Coordinator. Likes → [blank]<br>Grade 12 @ Bishop Ryan CSS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 8" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Joel Mathews</strong><br>Operations Lead. Likes → [blank]<br>Grade 12 @ Westmount SS" />
+            <img src="assets/logo.jpeg" alt="Member 8" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Joel Mathews</strong><br>Operations Lead. Likes → [blank]<br>Grade 12 @ Westmount SS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 9" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Sam Dallaway</strong><br> Operations Coordinator. Likes → [blank]<br>Grade 12 @ Orchard Park SS" />
+            <img src="assets/logo.jpeg" alt="Member 9" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Sam Dallaway</strong><br> Operations Coordinator. Likes → [blank]<br>Grade 12 @ Orchard Park SS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 10" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Rosan Syal</strong><br>Operations Coordinator. Likes → [blank]<br>Grade 11 @ Rosan Syal" />
+            <img src="assets/logo.jpeg" alt="Member 10" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Rosan Syal</strong><br>Operations Coordinator. Likes → [blank]<br>Grade 11 @ Rosan Syal" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 11" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Sukh Chana</strong><br>Marketing Lead. Likes → [blank]<br>Grade 12 @ Orchard Park SS" />
+            <img src="assets/logo.jpeg" alt="Member 11" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Sukh Chana</strong><br>Marketing Lead. Likes → [blank]<br>Grade 12 @ Orchard Park SS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 12" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Cameron Jacka</strong><br>Marketing Coordinator. Likes → [blank]<br>Grade 12 @ St. Mary CSS" />
+            <img src="assets/logo.jpeg" alt="Member 12" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Cameron Jacka</strong><br>Marketing Coordinator. Likes → [blank]<br>Grade 12 @ St. Mary CSS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 13" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Marinel Gomez</strong><br>Marketing Coordinator. Likes → [blank]<br>Grade 10 @ St. Thomas More CSS" />
+            <img src="assets/logo.jpeg" alt="Member 13" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Marinel Gomez</strong><br>Marketing Coordinator. Likes → [blank]<br>Grade 10 @ St. Thomas More CSS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 14" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Alexandra Lima</strong><br>Finance Lead. Likes → [blank]<br>Grade 12 @ St. Thomas More CSS" />
+            <img src="assets/logo.jpeg" alt="Member 14" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Alexandra Lima</strong><br>Finance Lead. Likes → [blank]<br>Grade 12 @ St. Thomas More CSS" />
           </div>
           <div class="flex items-center justify-center">
-            <img src="assets/logo.jpeg" alt="Member 15" class="w-20 h-20 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Nand Shah</strong><br>Finance Coordinator. Likes → Basketball & Hockey ⛹️<br>Grade 11 @ Westmount SS" />
+            <img src="assets/logo.jpeg" alt="Member 15" class="w-20 h-20 transition-transform duration-300 hover:scale-140 rounded-full object-cover border-4 border-white shadow-lg cursor-pointer team-member" data-desc="<strong>Nand Shah</strong><br>Finance Coordinator. Likes → Basketball & Hockey ⛹️<br>Grade 11 @ Westmount SS" />
           </div>
         </div>
       </div>
