team: header button smoothly leads to team section
also date and location info updated

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<style>
+  html {
+    scroll-behavior: smooth;
+  }
+</style>
 </head>
 <body>
   <body class="main">
@@ -37,10 +42,10 @@
     <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30">
       Schedule
     </button>
-    <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30">
+    <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30"> 
       FAQ
     </button>
-    <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30">
+    <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30" onclick="location.href='#team-section'">
       Team
     </button>
     <button class="text-2xl relative left-0 hover:bg-gray-300 h-25 w-30">
@@ -57,8 +62,8 @@
        </a>
       <div class="relative bottom-15">
         <h1 class="text-4xl font-bold text-yellow-500">A High School Hackathon where you can present your amazing ideas with technology!</h1>
-        <h1 class="text-4xl font-bold">??? 2026</h1>
-        <h1 class="text-4xl font-bold">Location ???</h1>
+        <h1 class="text-4xl font-bold">Winter 2026</h1>
+        <h1 class="text-4xl font-bold">Hamilton, Ontario</h1>
       </div>
 
       <div class="bg-white text-black max-w-300 w-auto mx-auto shadow-md rounded-2xl border-gray-400 border-4" id="AboutUs">
@@ -86,7 +91,7 @@
     
   </div>
   <div class="team">
-    <!-- team sect start -->
+    <!-- team section start -->
     <section class="flex flex-row w-full h-[600px] bg-gray-100 mt-12" id="team-section">
       <!-- description on left -->
       <div class="w-1/2 flex items-center justify-center">
